# distill-cli

./: .gitignore  Cargo.toml  Config  README.md  config.toml  summary.md
src/: main.rs  summarize.rs  transcribe.rs
